--- a/2.html
+++ b/2.html
@@ -20,7 +20,7 @@
         <li>CSS적용 우선순위</li>
       </ol>
   <h2>CSS란 무엇인가</h2>
-  <p style="font-size:15px;"><strong>Cascading Style Sheets 는 documents가 사용자에게 어떻게 보여질까를 기술하는 언어이다.<br>HTML이 정보를 표현한다면 CSS는 HTML문서를 시작적으로 이쁘게 꾸며주는 역할을 한다.<strong></p>
+  <p style="font-size:15px;">Cascading Style Sheets 는 documents가 사용자에게 어떻게 보여질까를 기술하는 언어이다.<br>HTML이 정보를 표현한다면 CSS는 HTML문서를 시작적으로 이쁘게 꾸며주는 역할을 한다.</p>
   <h2>CSS로 기대되는 효과<h2>
   <p style="font-size:15px">
     1.정보(HTML)와 디자인(CSS)를 분리하여 관리할 수 있다.<br>
