--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
+    <li><a href="4.html">new</a></li>
   </ol>
     <h1>WEB<h1>
 
